# budgie-rd

./: .clang-format  .gitignore  README.md  THOUGHTS.md  meson.build  mkgobuildy.sh  start_nvidia.sh  update_format.sh
old.src/: meson.build
old.src/compositor/: meson.build  window.h
old.src/desktop/lib/: manager.h
old.src/desktop/panel/: applet.cpp  applet.h  manager.cpp  manager.h  meson.build  window.cpp  window.h
old.src/desktop/panel/budgie-menu/: budgie-menu.cpp  budgie-menu.h  menu-button.cpp  menu-button.h  menu-window.cpp  menu-window.h
old.src/desktop/panel/clock/: clock.cpp  clock.h
old.src/desktop/panel/raven-trigger/: raven-trigger.cpp  raven-trigger.h
old.src/desktop/panel/tasklist/: taskbutton.cpp  taskbutton.h  tasklist.cpp  tasklist.h
old.src/desktop/raven/: raven.cpp  raven.h
old.src/desktop/shell/: desktop-manager.cpp  desktop-manager.h  icon-provider.cpp  icon-provider.h  main.cpp  meson.build  root-window.cpp  root-window.h  shell.qrc
old.src/desktop/taskmon/: task-monitor.cpp  task-monitor.h  window.cpp  window.h
old.src/session/: main.cpp  manager.cpp  manager.h
old.src/xdg/: desktop-file.cpp  desktop-file.h  ini-parser.cpp  ini-parser.h
qml/: backdrop.qmlc  panel.qml
src/: meson.build
src/common/: meson.build  plugin.cpp  plugin.h  registry.cpp  registry.h
src/compositor/: compositor-common.h  compositor-registry.cpp  compositor-registry.h  compositor.cpp  compositor.h  display.cpp  display.h  main.cpp  manager.cpp  manager.h  meson.build  server-input.cpp  server-interfaces.cpp  server.cpp  server.h  surface-item.cpp  surface-item.h  view.cpp  view.h  wayland-window.cpp  wayland-window.h  window.cpp  window.h
src/compositor/renderers/: meson.build
src/compositor/renderers/opengl/: meson.build  renderer-display.cpp  renderer-display.h  renderer-view.cpp  renderer-view.h  renderer.cpp  renderer.h  renderer.json
src/compositor/windows/: wayland-window-wl-shell.cpp  wayland-window-wl-shell.h  wayland-window-xdg-shell-v5.cpp  wayland-window-xdg-shell-v5.h  wayland-window.cpp  wayland-window.h
src/desktop/: meson.build
src/desktop/panel/: applet.cpp  applet.h  manager.cpp  manager.h  meson.build  window.cpp  window.h
src/desktop/panel/budgie-menu/: budgie-menu.cpp  budgie-menu.h  menu-button.cpp  menu-button.h  menu-window.cpp  menu-window.h
src/desktop/panel/clock/: clock.cpp  clock.h
src/desktop/panel/raven-trigger/: raven-trigger.cpp
src/desktop/panel/tasklist/: taskbutton.cpp  taskbutton.h  tasklist.cpp  tasklist.h
src/desktop/raven/: raven.cpp  raven.h
src/desktop/shell/: desktop-manager.cpp  desktop-manager.h  icon-provider.cpp  icon-provider.h  main.cpp  meson.build  root-window.cpp
src/desktop/shell/qml/: backdrop.qml  panel.qml  raven.qml
src/desktop/taskmon/: task-monitor.cpp  task-monitor.h  window.cpp  window.h
src/faces/: meson.build
src/faces/default/: face.cpp  face.h  face.json  meson.build
src/interfaces/: base-interface.h  compositor-input-interface.h  compositor-renderer-interface.h  compositor-server-interface.h  display-interface.h  face-interface.h  meson.build  panel-interface.h  panel-manager-interface.h  raven-interface.h  service-interface.h  session-module-interface.h  shell-interface.h  window-interface.h  window-manager-interface.h
src/panel/: main.cpp  manager.cpp  manager.h  meson.build  window.cpp  window.h
src/raven/: main.cpp  meson.build  raven.cpp  raven.h  raven.qrc
src/scaffolding/panel/: manager.cpp  manager.h  meson.build  window.cpp  window.h
src/scaffolding/raven/: meson.build  raven-window.cpp  raven-window.h
src/services/: meson.build
src/services/kwin/: meson.build  service.cpp  service.h  service.json
src/services/notifications/: meson.build  service.cpp  service.h  service.json
src/services/windowmanager/: meson.build  service.cpp  service.h
src/session/: desktop-file.cpp  desktop-file.h  main.cpp  manager.cpp  manager.h  meson.build  session-registry.cpp  session-registry.h  session.cpp  session.h  wm.desktop
src/session/modules/: meson.build
src/session/modules/shell/: meson.build  service.cpp  service.h  service.json
src/session/modules/windowmanager/: meson.build  service.cpp  service.h  service.json
src/shell/: desktop-manager.cpp  desktop-manager.h  main.cpp  meson.build  plugin.cpp  plugin.h  registry.cpp  registry.h  root-window.cpp  root-window.h  service-interface.h  shell-registry.cpp  shell-registry.h  shell.cpp  shell.h  shell.qrc
src/shell/qml/: backdrop.qml  panel.qml  raven.qml
src/taskmon/: meson.build  task-monitor.cpp  task-monitor.h  window.cpp  window.h
src/xdg/: desktop-file.cpp  desktop-file.h  ini-parser.cpp  ini-parser.h  meson.build
